WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177860
[GTK] GtkUtilities.h should not be included in libs not linked to GTK
https://bugs.webkit.org/show_bug.cgi?id=177860
Summary
[GTK] GtkUtilities.h should not be included in libs not linked to GTK
Michael Catanzaro
Reported
2017-10-04 03:06:52 PDT
HyphenationLibHyphen must not depend on GtkUtilities.h, since HyphenationLibHyphen is not built as part of the WebCorePlatformGTK static lib that is linked to GTK+, it's built as part of the WebCore static lib which is not.
Attachments
Patch
(7.01 KB, patch)
2017-10-04 04:30 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2017-10-04 04:28:43 PDT
Also as of yesterday, we're using it in FontCacheFreeType.cpp, which is not good because that's not built as part of WebCorePlatformGTK.
Michael Catanzaro
Comment 2
2017-10-04 04:30:36 PDT
Created
attachment 322651
[details]
Patch
WebKit Commit Bot
Comment 3
2017-10-04 07:07:22 PDT
Comment on
attachment 322651
[details]
Patch Clearing flags on attachment: 322651 Committed
r222844
: <
http://trac.webkit.org/changeset/222844
>
WebKit Commit Bot
Comment 4
2017-10-04 07:07:24 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug