[GTK] GtkUtilities.h should not be included in libs not linked to GTK https://bugs.webkit.org/show_bug.cgi?id=177860

Reviewed by Carlos Garcia Campos.

* platform/FreeType.cmake:
* platform/gtk/GtkUtilities.cpp:
(WebCore::topLevelPath): Deleted.
(WebCore::webkitBuildDirectory): Deleted.
* platform/gtk/GtkUtilities.h:
(WebCore::wallTimeForEvent):
* platform/text/hyphen/HyphenationLibHyphen.cpp:
(WebCore::topLevelPath):
(WebCore::webkitBuildDirectory):


Canonical link: https://commits.webkit.org/194123@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222844 268f45cc-cd09-0410-ab3c-d52691b4dbfc