Source/WebCore/platform/gtk/GtkUtilities.cpp
@@ -21,7 +21,6 @@
 
 #include "IntPoint.h"
 #include <gtk/gtk.h>
-#include <wtf/glib/GLibUtilities.h>
 #include <wtf/glib/GUniquePtr.h>
 
 namespace WebCore {
@@ -77,31 +76,5 @@ String defaultGtkSystemFont()
         *spaceChar = '\0';
     return String::fromUTF8(fontString.get());
 }
-
-#if ENABLE(DEVELOPER_MODE)
-static CString topLevelPath()
-{
-    if (const char* topLevelDirectory = g_getenv("WEBKIT_TOP_LEVEL"))
-        return topLevelDirectory;
-
-    // If the environment variable wasn't provided then assume we were built into
-    // WebKitBuild/Debug or WebKitBuild/Release. Obviously this will fail if the build
-    // directory is non-standard, but we can't do much more about this.
-    GUniquePtr<char> parentPath(g_path_get_dirname(getCurrentExecutablePath().data()));
-    GUniquePtr<char> layoutTestsPath(g_build_filename(parentPath.get(), "..", "..", "..", nullptr));
-    GUniquePtr<char> absoluteTopLevelPath(realpath(layoutTestsPath.get(), 0));
-    return absoluteTopLevelPath.get();
-}
-
-CString webkitBuildDirectory()
-{
-    const char* webkitOutputDir = g_getenv("WEBKIT_OUTPUTDIR");
-    if (webkitOutputDir)
-        return webkitOutputDir;
-
-    GUniquePtr<char> outputDir(g_build_filename(topLevelPath().data(), "WebKitBuild", nullptr));
-    return outputDir.get();
-}
-#endif
 
 } // namespace WebCore
