Source/WebCore/platform/gtk/GtkUtilities.h
@@ -19,6 +19,7 @@
 #ifndef GtkUtilities_h 
 #define GtkUtilities_h 
 
+#include <gtk/gtk.h>
 #include <wtf/MonotonicTime.h>
 #include <wtf/WallTime.h>
 #include <wtf/text/CString.h>
@@ -34,10 +35,7 @@ bool widgetIsOnscreenToplevelWindow(GtkWidget*);
 template<typename GdkEventType>
 WallTime wallTimeForEvent(const GdkEventType* event)
 {
-    // FIXME: 0 is GDK_CURRENT_TIME. We should stop including this header from
-    // HyphenationLibHyphen.cpp so that we can include gtk/gtk.h here and use
-    // GDK_CURRENT_TIME.
-    if (event->time == 0)
+    if (event->time == GDK_CURRENT_TIME)
         return WallTime::now();
     return MonotonicTime::fromRawSeconds(event->time / 1000.).approximateWallTime();
 }
@@ -46,10 +44,6 @@ template<>
 WallTime wallTimeForEvent(const GdkEvent*);
 
 String defaultGtkSystemFont();
-
-#if ENABLE(DEVELOPER_MODE)
-CString webkitBuildDirectory();
-#endif
 
 } // namespace WebCore
 
