Source/WebCore/platform/FreeType.cmake
@@ -7,7 +7,6 @@ list(APPEND WebCore_INCLUDE_DIRECTORIES
 )
 
 list(APPEND WebCore_SOURCES
-    platform/graphics/freetype/FontCacheFreeType.cpp
     platform/graphics/freetype/FontCustomPlatformDataFreeType.cpp
     platform/graphics/freetype/FontPlatformDataFreeType.cpp
     platform/graphics/freetype/GlyphPageTreeNodeFreeType.cpp
@@ -16,6 +15,16 @@ list(APPEND WebCore_SOURCES
     platform/graphics/harfbuzz/ComplexTextControllerHarfBuzz.cpp
     platform/graphics/harfbuzz/HarfBuzzFace.cpp
 )
+
+if (PORT STREQUAL "GTK")
+    list(APPEND WebCorePlatformGTK_SOURCES
+        platform/graphics/freetype/FontCacheFreeType.cpp
+)
+else ()
+    list(APPEND WebCore_SOURCES
+        platform/graphics/freetype/FontCacheFreeType.cpp
+)
+endif ()
 
 if (USE_CAIRO)
     list(APPEND WebCore_SOURCES
